- Included repository name, owner login, and branch information with the last commit sha in the JSON response.